--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.2.0",
     "js-file-download": "^0.4.12",
     "mongoose": "^7.5.2",
     "nodemon": "^3.0.1",
