--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "js-file-download": "^0.4.12",
     "mongoose": "^7.5.2",
     "nodemon": "^3.0.1",
-    "puppeteer": "^21.2.1"
+    "pdf2image": "^1.2.3",
+    "puppeteer": "^21.2.1",
+    "puppeteer-extra": "^3.3.6"
   }
 }
